tests/specs/ecosystem/build/scheduling/0_1_0.test
build/scheduling/0.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mode.ts:11:14
   | 
11 | export const setMode = (newMode: Mode) => {
   |              ^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /frameloop.ts:122:10
    | 
122 |   public onUpdate = (callback: (delta: number) => void) => {
    |          ^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /frameloop.ts:126:10
    | 
126 |   public once = (callback: (delta: number) => void) => {
    |          ^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


